--- a/404.html
+++ b/404.html
@@ -1,1 +1,20 @@
-<script>window.location.replace("com.freehealth.meala://--/root/");</script>
+<head>
+    <script>window.location.replace("com.freehealth.meala://--/" + window.location.pathname);</script>
+    <meta name="apple-itunes-app" content="app-id={ITUNES_ID}" />
+</head>
+
+<body>
+    <div>
+        <h1>Meala</h1>
+        <p>The app that makes cooking and recipes social</p>
+        <p> Meala on the <a href="https://apps.apple.com/us/app/meala/id1622381759"> App Store</a>
+        </p>
+        <p>▶ Meala on the <a href="https://play.google.com/store/apps/details?id=com.freehealth.meala"> Google Play
+                Store
+            </a>
+        </p>
+        <p>📷 Follow us on<a href="https://www.instagram.com/appmeala/"> Instagram </a>
+        </p>
+    </div>
+
+</body>
