--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
         try {
             window.location.replace("com.freehealth.meala://--/" + window.location.pathname);
         } catch(err) {
+            window.location.replace("meala.net");
         }
     </script>
     <meta name="apple-itunes-app" content="app-id={ITUNES_ID}" />
